# mvm

./: .envrc.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  QUICKSTART.md  README.md  deny.toml  flake.nix  install.sh  treefmt.toml
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
crates/mvm-agent/: Cargo.toml
crates/mvm-agent/src/: agent.rs  templates.rs
crates/mvm-apple-container/: Cargo.toml  build.rs
crates/mvm-apple-container/src/: lib.rs  macos.rs
crates/mvm-apple-container/swift/Sources/MvmContainerBridge/: bridge.swift
crates/mvm-build/: Cargo.toml
crates/mvm-build/resources/builder_scripts/: extract_artifacts_host.sh.tera  extract_artifacts_ssh.sh.tera  extract_artifacts_vsock_disk.sh.tera  launch_firecracker_ssh.sh.tera  launch_firecracker_vsock.sh.tera  run_nix_build_ssh.sh.tera
crates/mvm-build/src/: artifacts.rs  build.rs  cache.rs  dev_build.rs  firecracker.rs  guest_agent.rs  lib.rs  orchestrator.rs  scripts.rs  template_reuse.rs  vsock_builder.rs
crates/mvm-build/src/backend/: host.rs  mod.rs  ssh.rs  vsock.rs
crates/mvm-build/src/nix/: manifest.rs  mod.rs  scripts.rs
crates/mvm-build/src/pipeline/: build.rs  dev_build.rs  mod.rs  vsock_builder.rs
crates/mvm-build/tests/: pipeline.rs
crates/mvm-cli/: Cargo.toml  README.md
crates/mvm-cli/resources/: shell_init.sh.tera
crates/mvm-cli/resources/template_scaffold/: README.md  flake-http.nix  flake-postgres.nix  flake-python.nix  flake-worker.nix  flake.nix
crates/mvm-cli/src/: bootstrap.rs  commands.rs  config_watcher.rs  dev_cluster.rs  doctor.rs  exec.rs  fleet.rs  http.rs  lib.rs  security_cmd.rs  shell_init.rs  template.rs  template_cmd.rs  ui.rs  update.rs  upgrade.rs  watch.rs
crates/mvm-cli/src/commands/: apple_container.rs  audit.rs  bootstrap_cmd.rs  build.rs  cache_cmd.rs  catalog.rs  cleanup.rs  completions.rs  config_cmd.rs  console.rs  dev.rs  diff.rs  doctor.rs  down.rs  exec_cmd.rs  flake_cmd.rs  forward.rs  image_cmd.rs  init_cmd.rs  logs.rs  ls.rs  metrics.rs  mod.rs  network.rs  run.rs  security.rs  setup.rs  shared.rs  shell.rs  template_run.rs  tests.rs  uninstall.rs  update_cmd.rs
crates/mvm-cli/src/commands/env/: apple_container.rs  bootstrap.rs  cleanup.rs  completions.rs  dev.rs  doctor.rs  init.rs  mod.rs  setup.rs  shell.rs  shell_init.rs  uninstall.rs  update.rs
crates/mvm-cli/src/commands/manifest/: info.rs  ls.rs  mod.rs  prune.rs  rm.rs  verify.rs
crates/mvm-cli/src/commands/ops/: audit.rs  cache.rs  config.rs  mcp.rs  metrics.rs  mod.rs  network.rs  security.rs
crates/mvm-cli/src/commands/shared/: drive.rs  event.rs  format.rs  hints.rs  mod.rs  parse.rs  resolve.rs  start.rs  state.rs  vsock.rs
crates/mvm-cli/src/commands/vm/: console.rs  diff.rs  down.rs  exec.rs  forward.rs  invoke.rs  logs.rs  mod.rs  ps.rs  up.rs
crates/mvm-coordinator/: Cargo.toml
crates/mvm-coordinator/src/: health.rs  lib.rs  proxy.rs  routing.rs  server.rs  state.rs  wake.rs
crates/mvm-core/: Cargo.toml
crates/mvm-core/src/: agent.rs  audit.rs  build_env.rs  config.rs  lib.rs  migration.rs  naming.rs  node.rs  platform.rs  pool.rs  secret_binding.rs  security.rs  template.rs  user_config.rs  vm_backend.rs
crates/mvm-core/src/domain/: agent.rs  instance.rs  manifest.rs  mod.rs  pool.rs  template.rs  tenant.rs
crates/mvm-core/src/observability/: metrics.rs
crates/mvm-core/src/platform/: linux_env.rs  mod.rs
crates/mvm-core/src/policy/: audit.rs  mod.rs  network_policy.rs  security.rs
crates/mvm-core/src/protocol/: mod.rs  protocol.rs  routing.rs  signing.rs  vm_backend.rs
crates/mvm-core/src/util/: atomic_io.rs  idle_metrics.rs  mod.rs  retry.rs  time.rs  util.rs
crates/mvm-guest/: Cargo.toml
crates/mvm-guest/fuzz/: Cargo.toml  README.md  rust-toolchain.toml
crates/mvm-guest/fuzz/corpus/fuzz_guest_request/: seed-ping  seed-port-fwd  seed-sleep-prep  seed-worker-status
crates/mvm-guest/fuzz/fuzz_targets/: fuzz_authenticated_frame.rs  fuzz_guest_request.rs
crates/mvm-guest/src/: builder_agent.rs  entrypoint.rs  integrations.rs  lib.rs  probes.rs  vsock.rs
crates/mvm-guest/tests/: seccomp_apply.rs
crates/mvm-mcp/: Cargo.toml
crates/mvm-mcp/src/: dispatcher.rs  env.rs  lib.rs  protocol.rs  server.rs  session.rs
crates/mvm-mcp/src/tools/: mod.rs  run.rs
crates/mvm-plan/: Cargo.toml
crates/mvm-plan/src/: envelope.rs  lib.rs  plan.rs  refs.rs  replay.rs  signing.rs  types.rs  validity.rs
crates/mvm-plan/tests/: plan_lifecycle.rs  replay_protection.rs
crates/mvm-policy/: Cargo.toml
crates/mvm-policy/src/: bundle.rs  lib.rs  policies.rs  resolver.rs  signing.rs
crates/mvm-runtime/: Cargo.toml  README.md
crates/mvm-runtime/src/: build_env.rs  config.rs  lib.rs  linux_env.rs  shell.rs  shell_mock.rs  ui.rs  vsock_transport.rs
crates/mvm-runtime/src/security/: audit.rs  certs.rs  encryption.rs  jailer.rs  keystore.rs  mod.rs
crates/mvm-runtime/src/shell/: exec.rs  mod.rs
crates/mvm-runtime/src/vm/: apple_container.rs  backend.rs  bridge.rs  firecracker.rs  image.rs  lima.rs  microvm.rs  microvm_nix.rs  mod.rs  network.rs  vminitd_client.rs
crates/mvm-runtime/src/vm/instance/: lifecycle.rs  net.rs
crates/mvm-runtime/src/vm/pool/: lifecycle.rs
crates/mvm-runtime/src/vm/proto/: sandbox_context.proto
crates/mvm-runtime/src/vm/template/: lifecycle.rs
crates/mvm-security/: Cargo.toml
crates/mvm-security/src/: command_gate.rs  image_verify.rs  lib.rs  posture.rs  rate_limiter.rs  seccomp.rs  threat_classifier.rs
crates/mvm-supervisor/: Cargo.toml
crates/mvm-supervisor/src/: artifact.rs  audit.rs  audit_dedup.rs  audit_file.rs  backend.rs  circuit_breaker.rs  egress.rs  injection_guard.rs  inspector.rs  keystore.rs  lib.rs  pii_redactor.rs  ssrf_guard.rs  state.rs  supervisor.rs  tool_gate.rs
docs/: SMOKE_TEST.md  builder-option-b.md  cli.md  development.md  index.html  page.html  quickstart.md  troubleshooting.md  user-guide.md
nix/: firecracker-kernel-pkg.nix  flake.nix  guest-agent-pkg.nix  minimal-init.nix
ops/: README.md
public/: astro.config.mjs  package.json  (+3 more)
(+290 files in other folders)
