[workspace]
members = [
    "crates/mvm-core",
    "crates/mvm-runtime",
    "crates/mvm-build",
    "crates/mvm-guest",
    "crates/mvm-agent",
    "crates/mvm-coordinator",
    "crates/mvm-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/auser/mvm"
homepage = "https://github.com/auser/mvm"
authors = ["mvm contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto / security
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rcgen = { version = "0.13", features = ["pem"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
sha2 = "0.10"
zeroize = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
indicatif = "0.17"
inquire = "0.7"
tabled = "0.17"

# QUIC
quinn = "0.11"

# HTTP
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Template engine
tera = "1"

# Allocator
mimalloc = "0.1"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "7"

# Dev dependencies
assert_cmd = "2"
predicates = "3"

# Root facade crate — re-exports all workspace libraries as `mvm`
[package]
name = "mvm"
version.workspace = true
edition.workspace = true
description = "Multi-tenant Firecracker microVM fleet manager"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "mvm"
path = "src/lib.rs"

[[bin]]
name = "mvm"
path = "src/main.rs"

[dependencies]
mvm-core = { path = "crates/mvm-core", version = "0.1.0" }
mvm-runtime = { path = "crates/mvm-runtime", version = "0.1.0" }
mvm-build = { path = "crates/mvm-build", version = "0.1.0" }
mvm-guest = { path = "crates/mvm-guest", version = "0.1.0" }
mvm-agent = { path = "crates/mvm-agent", version = "0.1.0" }
mvm-coordinator = { path = "crates/mvm-coordinator", version = "0.1.0" }
mvm-cli = { path = "crates/mvm-cli", version = "0.1.0" }
anyhow.workspace = true
mimalloc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
