[workspace]
members = [
    "crates/mvm-core",
    "crates/mvm-security",
    "crates/mvm-runtime",
    "crates/mvm-build",
    "crates/mvm-guest",
    "crates/mvm-cli",
]
resolver = "3"

[workspace.package]
version = "0.3.9"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/auser/mvm"
homepage = "https://github.com/auser/mvm"
authors = ["mvm contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Pattern matching
aho-corasick = "1"
regex = "1"

# Crypto
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
indicatif = "0.17"
inquire = "0.7"

# Template engine
tera = "1"

# Object storage abstraction (used for dev template registry)
opendal = { version = "0.50", features = ["services-s3"] }

# Allocator
mimalloc = "0.1"

# HTTP client (for CLI upgrade)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# Name generation
names = { version = "0.14", default-features = false }

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "7"

# Internal crates
mvm-core = { path = "crates/mvm-core", version = "0.3.2" }
mvm-guest = { path = "crates/mvm-guest", version = "0.3.2" }
mvm-build = { path = "crates/mvm-build", version = "0.3.2" }
mvm-runtime = { path = "crates/mvm-runtime", version = "0.3.2" }
mvm-security = { path = "crates/mvm-security", version = "0.3.2" }
mvm-cli = { path = "crates/mvm-cli", version = "0.3.2" }

# Dev dependencies
assert_cmd = "2"
predicates = "3"

# Root facade crate — re-exports all workspace libraries and provides the `mvmctl` binary
[package]
name = "mvmctl"
version.workspace = true
edition.workspace = true
description = "Firecracker microVM development tool"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "mvmctl"
path = "src/lib.rs"

[[bin]]
name = "mvmctl"
path = "src/main.rs"

[dependencies]
mvm-core.workspace = true
mvm-security.workspace = true
mvm-runtime.workspace = true
mvm-build.workspace = true
mvm-guest.workspace = true
mvm-cli.workspace = true
anyhow.workspace = true
mimalloc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
