[package]
name = "mvm-agent"
version.workspace = true
edition.workspace = true
description = "Reconcile engine, coordinator client, and ops facade for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core = { path = "../mvm-core", version = "0.1.0" }
mvm-runtime = { path = "../mvm-runtime", version = "0.1.0" }
mvm-build = { path = "../mvm-build", version = "0.1.0" }
mvm-guest = { path = "../mvm-guest", version = "0.1.0" }
anyhow.workspace = true
chrono.workspace = true
quinn.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
