[package]
name = "mvm-apple-container"
version = "0.7.1"
edition = "2024"
description = "Apple Virtualization.framework backend for mvm"
license = "Apache-2.0"
# Only builds on macOS with Apple Silicon
# On other platforms, this crate compiles as a no-op stub

[dependencies]
tracing = "0.1"

[dependencies.libc]
version = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
dispatch2 = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSError"] }
objc2-virtualization = { version = "0.3", features = [
    "VZBootLoader",
    "VZLinuxBootLoader",
    "VZVirtualMachine",
    "VZVirtualMachineConfiguration",
    "VZGenericPlatformConfiguration",
    "VZPlatformConfiguration",
    "VZVirtioBlockDeviceConfiguration",
    "VZStorageDeviceConfiguration",
    "VZDiskImageStorageDeviceAttachment",
    "VZNetworkDeviceConfiguration",
    "VZVirtioNetworkDeviceConfiguration",
    "VZNATNetworkDeviceAttachment",
    "VZNetworkDeviceAttachment",
    "VZVirtioEntropyDeviceConfiguration",
    "VZEntropyDeviceConfiguration",
    "VZSerialPortConfiguration",
    "VZVirtioConsoleDeviceSerialPortConfiguration",
    "VZSerialPortAttachment",
    "VZFileHandleSerialPortAttachment",
    "VZMemoryBalloonDeviceConfiguration",
    "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
    "VZSocketDevice",
    "VZSocketDeviceConfiguration",
    "VZVirtioSocketDevice",
    "VZVirtioSocketDeviceConfiguration",
    "VZVirtioSocketConnection",
] }
