[package]
name = "mvm-cli"
version.workspace = true
edition.workspace = true
description = "CLI commands, UI, and bootstrap for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core = { path = "../mvm-core", version = "0.1.0" }
mvm-agent = { path = "../mvm-agent", version = "0.1.0" }
mvm-runtime = { path = "../mvm-runtime", version = "0.1.0" }
mvm-coordinator = { path = "../mvm-coordinator", version = "0.1.0" }
mvm-build = { path = "../mvm-build", version = "0.1.0" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
indicatif.workspace = true
inquire.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tabled.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
which.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
