[package]
name = "mvm-cli"
version.workspace = true
edition.workspace = true
description = "CLI commands, UI, and bootstrap for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core.workspace = true
mvm-guest.workspace = true
mvm-runtime.workspace = true
mvm-build.workspace = true
mvm-security.workspace = true
anyhow.workspace = true
chrono.workspace = true
names.workspace = true
clap.workspace = true
reqwest.workspace = true
clap_complete.workspace = true
colored.workspace = true
indicatif.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tera.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
