[package]
name = "mvm-coordinator"
version.workspace = true
edition.workspace = true
description = "Gateway load-balancer, TCP proxy, and wake manager for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core = { path = "../mvm-core", version = "0.1.0" }
mvm-runtime = { path = "../mvm-runtime", version = "0.1.0" }
anyhow.workspace = true
quinn.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
etcd-client = "0.18.0"
async-trait = "0.1.89"
