[package]
name = "mvm-guest"
version.workspace = true
edition.workspace = true
description = "vsock protocol and openclaw connector mapping for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "mvm-builder-agent"
path = "src/bin/mvm-builder-agent.rs"

[[bin]]
name = "mvm-guest-agent"
path = "src/bin/mvm-guest-agent.rs"

[features]
dev-shell = []

[dependencies]
mvm-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
