[package]
name = "mvm-plan"
description = "ExecutionPlan: signed, typed workload contract for mvm. Plan 37 §3.3."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"

[dev-dependencies]
rand.workspace = true
