[package]
name = "mvm-runtime"
version.workspace = true
edition.workspace = true
description = "Shell execution, security ops, and VM lifecycle for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "mvm-hostd"
path = "src/bin/mvm-hostd.rs"

[dependencies]
mvm-core = { path = "../mvm-core", version = "0.1.0" }
mvm-guest = { path = "../mvm-guest", version = "0.1.0" }
mvm-build = { path = "../mvm-build", version = "0.1.0" }
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
mimalloc.workspace = true
ed25519-dalek.workspace = true
indicatif.workspace = true
inquire.workspace = true
quinn.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tera.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
zeroize.workspace = true
