[package]
name = "mvm-runtime"
version.workspace = true
edition.workspace = true
description = "Shell execution and VM lifecycle for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
autobins = false

[dependencies]
mvm-core.workspace = true
mvm-security.workspace = true
mvm-guest.workspace = true
mvm-build.workspace = true
anyhow.workspace = true
base64.workspace = true
colored.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
indicatif.workspace = true
inquire.workspace = true
opendal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tera.workspace = true
toml.workspace = true
tracing.workspace = true
