[package]
name = "mvm-security"
description = "Security modules for mvm: command gating, threat classification, rate limiting, posture scoring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
# Enables cosign-keyless manifest verification via the sigstore Rust crate.
# Default-on for release builds; disable with --no-default-features for a
# smaller binary at the cost of a fail-closed `verify_manifest` stub.
# Plan 36 / ADR 005.
default = ["manifest-verify"]
manifest-verify = ["dep:sigstore", "dep:tokio"]

[dependencies]
mvm-core.workspace = true
aho-corasick.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror = "1"
tracing.workspace = true

# Optional: cosign keyless verification (gated behind `manifest-verify`).
sigstore = { version = "0.13", default-features = false, features = ["bundle", "sigstore-trust-root", "rustls-tls"], optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
