[package]
name = "mvm-supervisor"
description = "Trusted host-side supervisor: owns egress proxy, tool gate, key release, audit signing, artifact capture, plan execution state machine. Plan 37 §7B."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core.workspace = true
mvm-plan.workspace = true
mvm-policy.workspace = true
async-trait = "0.1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tracing.workspace = true
