[package]
name = "mvm-supervisor"
description = "Trusted host-side supervisor: owns egress proxy, tool gate, key release, audit signing, artifact capture, plan execution state machine. Plan 37 §7B."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core.workspace = true
mvm-plan.workspace = true
mvm-policy.workspace = true
async-trait = "0.1"
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror = "1"
# Wave 2.6: L7EgressProxy uses tokio::net::lookup_host for the
# production DnsResolver impl. Tests use only `macros + rt`, the
# proxy needs `net` for lookup. `rt-multi-thread` lands when the
# TCP listener loop ships in 2.6 chunk (c).
tokio = { workspace = true, features = ["net", "rt"] }
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time"] }
